# MySpyder

./: .gitignore  CMake文档.docx  README.md
source/CMake/: CMakeLists.txt  generate_Sln.bat  generate_Sln.sh  readme_Linux.txt
source/CMake/musicplayer/: CMakeLists.txt
source/CMake/spyder/: CMakeLists.txt
source/musicplayer/: main.cpp  music.cpp  music.h  musicplayer.pro  musicplayer_zh_CN.ts  os.cpp  os.h
source/musicplayer/apis/: apirequestsbase.cpp  apirequestsbase.h  neteaseapi.cpp  neteaseapi.h  neteaseencode.cpp  neteaseencode.h
source/musicplayer/features/: configdownloadframefeatures.cpp  configdownloadframefeatures.h  configmainfeatures.cpp  configmainfeatures.h  configneteasefeatures.cpp  configneteasefeatures.h  configrecommendframefeatures.cpp  configrecommendframefeatures.h
source/musicplayer/widgets/: addition.cpp  addition.h  base.cpp  base.h  changeskinwidget.cpp  changeskinwidget.h  desktoplyricbuttons.cpp  desktoplyricbuttons.h  downloadframe.cpp  downloadframe.h  loginframes.cpp  loginframes.h  native.cpp  native.h  neteasesingsframes.cpp  neteasesingsframes.h  player.cpp  player.h  recommendframe.cpp  recommendframe.h  singsframebase.cpp  singsframebase.h  skinwidget.cpp  skinwidget.h  systemtray.cpp  systemtray.h
source/spyder/: builtins.cpp  builtins.h  configparser.cpp  configparser.h  fnmatch.cpp  fnmatch.h  keyword.cpp  keyword.h  main.cpp  nsview.cpp  nsview.h  os.cpp  os.h  saxutils.cpp  saxutils.h  spyder.pro  str.cpp  str.h  textwrap.cpp  textwrap.h
source/spyder/api/: editorextension.cpp  editorextension.h  panel.cpp  panel.h
source/spyder/app/: mainwindow.cpp  mainwindow.h  tour.cpp  tour.h
source/spyder/config/: base.cpp  base.h  config_main.cpp  config_main.h  fonts.h  gui.cpp  gui.h  utils.cpp  utils.h
source/spyder/intervaltree/: interval.cpp  interval.h  intervaltree.cpp  intervaltree.h  treenode.cpp  treenode.h
source/spyder/plugins/: configdialog.cpp  configdialog.h  history.cpp  history.h  ipythonconsole.cpp  ipythonconsole.h  maininterpreter.cpp  maininterpreter.h  outlineexplorer.cpp  outlineexplorer.h  plugins.cpp  plugins.h  plugins_editor.cpp  plugins_editor.h  plugins_explorer.cpp  plugins_explorer.h  plugins_findinfiles.cpp  plugins_findinfiles.h  projects.cpp  projects.h  runconfig.cpp  runconfig.h  workingdirectory.cpp  workingdirectory.h
source/spyder/plugins/editor/api/: decoration.cpp  decoration.h
source/spyder/plugins/editor/panels/: codefolding.cpp  codefolding.h
source/spyder/plugins/editor/utils/: editor.cpp  editor.h
source/spyder/utils/: SyntaxHighlighterFactory.cpp  SyntaxHighlighterFactory.h  check.cpp  check.h  encoding.cpp  encoding.h  icon_manager.cpp  icon_manager.h  misc.cpp  misc.h  programs.cpp  programs.h  qthelpers.cpp  qthelpers.h  sourcecode.cpp  sourcecode.h  syntaxhighlighters.cpp  syntaxhighlighters.h
source/spyder/utils/introspection/: plugin_client.cpp  plugin_client.h
source/spyder/widgets/: arraybuilder.cpp  arraybuilder.h  calltip.cpp  calltip.h  colors.cpp  colors.h  comboboxes.cpp  comboboxes.h  editor.cpp  editor.h  editortools.cpp  editortools.h  explorer.cpp  explorer.h  fileswitcher.cpp  fileswitcher.h  findinfiles.cpp  findinfiles.h  findreplace.cpp  findreplace.h  helperwidgets.cpp  helperwidgets.h  mixins.h  onecolumntree.cpp  onecolumntree.h  pathmanager.cpp  pathmanager.h  reporterror.cpp  reporterror.h  status.cpp  status.h  tabs.cpp  tabs.h  waitingspinner.cpp  waitingspinner.h
source/spyder/widgets/github/: backend.cpp  backend.h  gh_login.cpp  gh_login.h
source/spyder/widgets/ipythonconsole/: control.cpp  control.h
source/spyder/widgets/projects/: projectdialog.cpp  projectdialog.h  projects_config.cpp  projects_config.h  projects_explorer.cpp  projects_explorer.h
source/spyder/widgets/projects/type/: projects_type.cpp  projects_type.h
source/spyder/widgets/sourcecode/: codeeditor.cpp  codeeditor.h  kill_ring.cpp  kill_ring.h  terminal.cpp  terminal.h  widgets_base.cpp  widgets_base.h
source/spyder/widgets/tests/: test_mixins.h
source/spyder/widgets/variableexplorer/: arrayeditor.cpp  arrayeditor.h  collectionseditor.cpp  collectionseditor.h  importwizard.cpp  importwizard.h  objecteditor.cpp  objecteditor.h  texteditor.cpp  texteditor.h
